# HEIR

./: .gitignore  CMakeLists.txt  HEIR.sh  LISENCE  README.md
HEIR_full_bench/database/: database-2.c  database-4.c  database-8.c
HEIR_full_bench/euclid_dist/: euclid_dist-16.c  euclid_dist-2048.c  euclid_dist-256.c  euclid_dist-4096.c  euclid_dist-512.c  euclid_dist-64.c
HEIR_full_bench/fibonacci/: fibonacci-16.c  fibonacci-32.c  fibonacci-4.c  fibonacci-64.c  fibonacci-8.c
HEIR_full_bench/inner_product/: inner_product-16.c  inner_product-2048.c  inner_product-256.c  inner_product-4096.c  inner_product-512.c  inner_product-64.c
HEIR_full_bench/min_index/: min_index-16.c  min_index-2.c  min_index-32.c  min_index-4.c  min_index-8.c
HEIR_full_bench/min_value/: min_value-16.c  min_value-2.c  min_value-32.c  min_value-4.c  min_value-8.c
HEIR_plot/: README.md
HEIR_plot/Database/: GenDatabaseResults.sh  plot_database.py
HEIR_plot/EuclidDist/: GenEuclidDistResults.sh  plot_euclid.py
HEIR_plot/Fibonacci/: GenFibonacciResults.sh  plot_fibonacci.py
HEIR_plot/InnerProduct/: GenInnerProductResults.sh  plot_inner.py
HEIR_plot/MinIndex/: GenMinIndexResults.sh  plot_index.py
HEIR_plot/MinValue/: GenMinValueResults.sh  plot_value.py
benchmarks/arithmetic/: README.md  euclid_dist.c  inner_product.c
benchmarks/e2e/: README.md  database.c  kmeans.c
benchmarks/logic/: README.md  fibonacci.c  min_index.c  min_value.c
cmake/modules/: AddHEIR.cmake  CMakeLists.txt  HEIRConfig.cmake.in
format_assistant/: halo_transmitter.py  polygeist_eliminator.py
include/heir/IR/FHE/: CMakeLists.txt  HEIR.td  HEIRDialect.h
include/heir/Passes/arith2heir/: LowerArithToHEIR.h
include/heir/Passes/batching/: Batching.h
include/heir/Passes/branch/: Branch.h
include/heir/Passes/encrypt/: Encrypt.h
include/heir/Passes/func2heir/: FuncToHEIR.h
include/heir/Passes/genparm/: GenParm.h
include/heir/Passes/heir2emitc/: LowerHEIRToEmitC.h
include/heir/Passes/lwe2rlwe/: LWEToRLWE.h
include/heir/Passes/memref2heir/: LowerMemrefToHEIR.h
include/heir/Passes/nary/: Nary.h
include/heir/Passes/slot2coeff/: SlotToCoeff.h
include/heir/Passes/unfold/: BranchUnfold.h
include/heir/Passes/unroll/: UnrollLoop.h
include/heir/Passes/vec2memref/: PromVecToMemref.h
src/IR/: CMakeLists.txt
src/IR/FHE/: CMakeLists.txt  HEIRDialect.cpp
src/Passes/: CMakeLists.txt
src/Passes/arith2heir/: CMakeLists.txt  LowerArithToHEIR.cpp  LowerArithToHEIR.td
src/Passes/batching/: Batching.cpp  CMakeLists.txt
src/Passes/branch/: Branch.cpp  CMakeLists.txt
src/Passes/encrypt/: CMakeLists.txt  Encrypt.cpp  Encrypt.td
src/Passes/func2heir/: CMakeLists.txt  FuncToHEIR.cpp  FuncToHEIR.td
src/Passes/genparm/: CMakeLists.txt  GenParm.cpp
src/Passes/heir2emitc/: CMakeLists.txt  LowerHEIRToEmitC.cpp  LowerHEIRToEmitC.td
src/Passes/lwe2rlwe/: CMakeLists.txt  LWEToRLWE.cpp
src/Passes/memref2heir/: CMakeLists.txt  LowerMemrefToHEIR.cpp  LowerMemrefToHEIR.td
src/Passes/nary/: CMakeLists.txt  Nary.cpp
src/Passes/slot2coeff/: CMakeLists.txt  SlotToCoeff.cpp
src/Passes/unfold/: CMakeLists.txt  Unfold.cpp
src/Passes/unroll/: CMakeLists.txt  UnrollLoop.cpp
src/Passes/vec2memref/: CMakeLists.txt  PromVecToMemref.cpp  PromVecToMemref.td
