add_subdirectory(arith2heir)
add_subdirectory(unroll)
add_subdirectory(memref2heir)
add_subdirectory(func2heir)
add_subdirectory(heir2emitc)
add_subdirectory(genparm)
add_subdirectory(unfold)
# add_subdirectory(encrypt)
# add_subdirectory(vec2memref)
add_subdirectory(batching)
add_subdirectory(nary)
add_subdirectory(slot2coeff)
add_subdirectory(lwe2rlwe)
add_subdirectory(branch)
# add_subdirectory(tensor2rlwe)